gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20696.d
version https://git-lfs.github.com/spec/v1
oid sha256:1d5f6f554da1fcfafa2af7f2d046ae6854962f09fab7d376cf6c37d1e1b1b091
size 498
